src/Components/Navbar/Navbar.css
.navbar {
  display: flex;
  justify-content: space-around;
  padding: 16px;
  box-shadow: 0 1px 2px -2px black;
  background-color: #fff;
  transition: all 0.3s ease-in-out;
}

.nav-logo {
  display: flex;
  align-items: center;
  gap: 10px;
}

.nav-logo p {
  color: #171717;
  font-size: 36px;
  font-weight: 600;
}

.nav-menu {
  display: flex;
  align-items: center;
  list-style: none;
  gap: 50px;
  color: #626262;
  font-size: 20px;
  font-weight: 500;
}

.nav-menu li {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 3px;
  cursor: pointer;
}

.nav-menu hr {
  border: none;
  width: 80%;
  height: 3px;
  border-radius: 10px;
  background-color: #ff4141;
}

.nav-login-cart {
  display: flex;
  align-items: center;
  margin-left: 50px;
  gap: 45px;
}

.nav-login-cart button {
  width: 157px;
  height: 58px;
  outline: none;
  border: 1px solid #7a7a7a;
  border-radius: 75px;
  color: #515151;
  font-size: 20px;
  font-weight: 500;
  background-color: #fff;
  cursor: pointer;
}

.nav-login-cart button:active {
  background: #f3f3f3;
}

.nav-cart-count {
  width: 22px;
  height: 22px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: -35px;
  margin-left: -55px;
  border-radius: 11px;
  font-size: 14px;
  background: #ff4141;
  color: #fff;
}

.nav-dropdown {
  display: none;
}

.visible {
  display: block;
}

.hidden {
  display: none;
}

.nav-hide {
  display: none;
}

/* .navbar.open {
  display: flex;
  flex-direction: column;
} */

.navbar.closed {
  display: flex;
}

@media(max-width: 1280px) {
  .navbar {
    padding: 12px 50px;
  }

  .nav-logo img { 
    width: 40px;
  }

  .nav-logo p {
    font-size: 25px;
  }

  .nav-menu {
    gap: 30px;
    font-size: 16px;
  }

  .nav-login-cart {
    gap: 30px;
  }

  .nav-login-cart button {
    width: 120px;
    height: 45px;
    font-size: 16px;
  }

  .nav-cart-count {
    margin-left: -40px;
    font-size: 12px;
  }
}

@media(max-width: 1024px) {
  .navbar {
    padding: 12px 30px;
  }

  .nav-menu {
    gap: 25px;
    font-size: 14px;
  }

  .nav-login-cart button {
    width: 80px;
    height: 35px;
    font-size: 14px;
  }

  .nav-login-cart img {
    width: 30px;
  }

  .nav-cart-count {
    width: 18px;
    height: 18px;
  }
}

@media(max-width: 800px) {
  .nav-hide {
    display: flex;
    justify-content: space-between;
    width: 90%;
    margin: 2.5% 5% 5% 5%;
    gap: 50px;
  }

  .nav-reveal {
    display: none;
  }

  .navbar {
    padding: 10px 8px;
    transition: 0.3s;
  }

  .nav-dropdown {
    display: block;
    width: 30px;
    height: 30px;
    transition: 0.5s
  }

  .nav-menu {
    display: flex;
    flex-direction: row;
    gap: 20px;
    height: 65px;
    width: 100%;
    position: absolute;
    background-color: #fff;
    justify-content: center;
    top: 50px;
  }

  .nav-login-cart button {
    width: 70px;
    height: 25px;
    font-size: 12px;
  }

  .nav-login-cart img {
    width: 23px;
  }

  .nav-cart-count {
    width: 12px;
    height: 12px;
    position: relative;
    bottom: -5px;
  }
}

@media (max-width: 500px) {
  .navbar {
    display: flex;
    justify-content: space-around;
    align-items: flex-start;
    flex-direction: column;
    width: 80%;
    padding: 8px 0;
    gap: 0;
    box-shadow: 0 1px 2px -2px black;
    transition: 0.3s
  }

  .nav-logo {
    transform: scale(0.8);
  }

  .nav-menu {
    flex-direction: column;
    top: 60px;
    left: 15px;
    align-items: flex-end;
    margin-left: -14%;
    padding: 10px 0;
    gap: 10px; 
    color: #626262;
    font-size: 14px;
    font-weight: 500;
  }

  .nav-menu li {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-left: -5%;
    gap: 3px;
    cursor: pointer;
  }

  .nav-menu hr {
    border: none;
    width: 80%;
    height: 3px;
    border-radius: 10px;
    background-color: #ff4141;
  }

  .nav-login-cart button {
    width: 65px;
    height: 23px;
    position: relative;
    top: -60px;
    right: 15px;
    font-size: 12px;
  }

    .nav-login-cart {
    display: flex;
    flex-direction: row;
    align-self: flex-end;
    align-items: center;
    gap: 20px; 
  }

  .nav-login-cart img {
    width: 23px;
    position: relative;
    top: -55px;
  }

  .nav-cart-count {
    width: 12px;
    height: 12px;
    position: relative;
    top: -50px;
    right: -12px;
  }

  .nav-hide {
    display: flex;
    justify-content: space-between;
    width: 90%;
    margin: 2.5% 5% 2% 5%;
    gap: 50px;
  }

  .nav-reveal {
    display: none;
  }

  .navbar.open {
    display: flex;
  }
  
  .navbar.closed {
    display: none;
  }

  .navbar {
    transition: all 0.3s ease-in-out;
  }  
}

@media (max-width: 418px) {
  .navbar {
    width: 70%;
    margin-bottom: 5%;
    background-size: cover;
  }

  .nav-menu {
    left: 20px;
    margin-left: -12%;
    gap: 8px; 
  }

  .nav-menu hr {
    border: none;
    width: 80%;
    height: 3px;
    border-radius: 10px;
    background-color: #ff4141;
  }

  .nav-login-cart button {
    left: 100px;
  }

  .nav-login-cart img {
    left: 85px;
  }

  .nav-cart-count {
    left: 95px;
  }

  .nav-reveal {
    display: none;
  }

  .navbar.open {
    display: flex;
  }
  .navbar.closed {
    display: none;
  }

  .navbar {
    transition: all 0.3s ease-in-out;
  }
}

